# AuthBox

./: CMakeLists.txt  README.md  Resources.qrc  main.cpp  main.qml
qml/: WinNegotiate.qml
